[package]
name = "kf_player"
version = "0.1.0"
authors = ["Kyle Moran <kmoran.1512@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.6.0"
serde_json = "1.0"
regex = "1"
uuid = { version = "0.8", features = ["v4"] }
